tests/e2e/pass/m21_str_subscript.ep
# EXIT: 66
fun main(): void {
    let s = "ABC"
    let bs = bytes(s)
    exit(bs[1])
}
