tests/e2e/fail/is_null_void.ep
# COMPILE_ERROR: is_null expects a reference, got void
fun main(): void {
    let result = is_null(print(""))
}
